--- a/Reading-FrontEnd/style.css
+++ b/Reading-FrontEnd/style.css
@@ -6,6 +6,12 @@
     font-size: 2rem;
 } */
 
+.container {
+    background-color: #dbf4ef;
+
+}
+body
+
 .row {
     list-style-type: none;
     margin: 0;
