--- a/Reading-FrontEnd/style.css
+++ b/Reading-FrontEnd/style.css
@@ -10,9 +10,20 @@
     background-color: #dbf4ef;
 
 }
-body
+.searchBar {
+    text-align: left;
+
+
+}
+h1 {
+    text-align: center;
+
+
+}
+
 
 .row {
+    
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -22,6 +33,7 @@ body
     /* updates */
     position: sticky;
     top: 0;
+   
 }
 
 .paragraph1{
@@ -31,7 +43,7 @@ body
     margin: 1rem 3rem;
     padding: 2rem;  
     border-radius: 1rem;
-    background-color: lightgrey;
+    background-color: rgba(219, 229, 193, 0.888);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -47,7 +59,7 @@ body
     margin: 1rem 3rem;
     padding: 2rem;  
     border-radius: 1rem;
-    background-color: lightgrey;
+    background-color: rgba(174, 223, 232, 0.891);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -63,7 +75,7 @@ body
     margin: 1rem 3rem;
     padding: 2rem;  
     border-radius: 1rem;
-    background-color: lightgrey;
+    background-color: rgba(174, 223, 232, 0.891);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
