--- a/ReadingList/src/main/resources/static/style.css
+++ b/ReadingList/src/main/resources/static/style.css
@@ -7,79 +7,134 @@
 } */
 
 .container {
-    background-color: #dbf4ef;
+    background-color: #dac292;
 
 }
+
 .searchBar {
     text-align: left;
 
-
 }
+
 h1 {
     text-align: center;
 
-
 }
 
-
 .row {
-    
+
     list-style-type: none;
+    width: 100px;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #dbf4ef;
+    background-color: #402a23;
+    color: #F3BC77
+    ;
     width: 100%;
     /* updates */
     position: sticky;
     top: 0;
-   
+
 }
 
-.paragraph1{
-    display: flex;
+.row2 {
+
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #402a23;
+    color:  green;
+    width: 100%;
+    /* updates */
+    position: sticky;
+    top: 0;
+
+}
+
+.paragraph1 {
     display: flex;
     box-shadow: 0.2rem 0.5rem 2rem;
     margin: 1rem 3rem;
-    padding: 2rem;  
+    padding: 2rem;
     border-radius: 1rem;
-    background-color: rgba(219, 229, 193, 0.888);
+    background-color: #f3bc77;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     max-width: 100%;
-    font-size: 10px;
+    font-size: 14px;
 
 }
 
-.paragraph2{
+.paragraph2 {
     display: flex;
     display: flex;
     box-shadow: 0.2rem 0.5rem 2rem;
     margin: 1rem 3rem;
-    padding: 2rem;  
+    padding: 2rem;
     border-radius: 1rem;
-    background-color: rgba(174, 223, 232, 0.891);
+    background-color: #f3bc77;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     max-width: 100%;
-    font-size: 10px;
+    font-size: 14px;
 
 }
 
-.paragraph3{
-    display: flex;
+.paragraph3 {
     display: flex;
     box-shadow: 0.2rem 0.5rem 2rem;
     margin: 1rem 3rem;
-    padding: 2rem;  
+    padding: 2rem;
     border-radius: 1rem;
-    background-color: rgba(174, 223, 232, 0.891);
+    background-color: #f3bc77;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     max-width: 100%;
-    font-size: 10px;
+    font-size: 14px;
 
+}
+
+
+
+.banner_img {
+    /* align-items: center;
+    margin: 1rem 3rem;
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 1rem;
+    width: 60000px;
+    max-width: 100%;
+    height: auto;
+    height: 405px;
+    background-color: purple;
+    background-position: center; */
+    height: 405px;
+    background-color: purple;
+    background-position: center;
+    width: 100%;
+    justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+body {
+    background-image: url("Wallpapers-books.jpg");
+    background-color: #1d1716;
+    min-height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-size: 100%;
+    background-attachment: fixed;
+    background-position: 0px 1px;
+}
+
+.nav-links {
+    color: green;
+    
 }
