--- a/ReadingList/src/main/resources/static/style.css
+++ b/ReadingList/src/main/resources/static/style.css
@@ -45,7 +45,7 @@ h1 {
     padding: 0;
     overflow: hidden;
     background-color: #402a23;
-    color:  green;
+    color:  #F3BC77;
     width: 100%;
     /* updates */
     position: sticky;
@@ -65,7 +65,10 @@ h1 {
     align-items: center;
     max-width: 100%;
     font-size: 14px;
-
+    text-align: justify;
+    text-justify: inter-word;
+    flex-direction: column;
+   margin-top: 55px;
 }
 
 .paragraph2 {
@@ -81,6 +84,9 @@ h1 {
     align-items: center;
     max-width: 100%;
     font-size: 14px;
+    text-align: justify;
+    text-justify: inter-word;
+    flex-direction: column;
 
 }
 
@@ -92,10 +98,14 @@ h1 {
     border-radius: 1rem;
     background-color: #f3bc77;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     max-width: 100%;
     font-size: 14px;
+    text-align: justify;
+     text-justify: inter-word;
+    
 
 }
 
